--- a/package.json
+++ b/package.json
@@ -1,7 +1,31 @@
 {
+  "Name": "MyPortofolio",
+  "Version": "1.0.0",
+  "description": "This is my cypress portofolio using cypress page object models",
+  "scripts": {
+    "test": "node_modules\\.bin\\cypress run",
+    "headlessTest": "npm run test -- --headed",
+    "chromeTest": "npm run test -- --browser chrome"
+  },
+  "cypress-cucumber-preprocessor" : {
+    "json": {
+      "enabled" : true,
+      "output" : "cypress/test_case/web_ui/CucumberReports/results.json"
+    }
+
+  },
+  
+  "author": "Kenny Ramadhan",
+  "license": "ISCI",
   "devDependencies": {
+    "@types/cypress-cucumber-preprocessor": "^4.0.1",
     "chai": "^4.3.7",
     "cypress": "^12.3.0",
-    "cypress-iframe": "^1.0.1"
+    "cypress-iframe": "^1.0.1",
+    "multiple-cucumber-html-reporter": "^3.1.0"
+  },
+  "dependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^15.1.3",
+    "@cypress/browserify-preprocessor": "latest"
   }
 }
